fix #67: visible dijitOffScreen elements

--- a/src/_base.less
+++ b/src/_base.less
@@ -50,6 +50,10 @@
   color: @color-fade6;
 }
 
+.dijitOffScreen {
+  left: -101vw !important;
+}
+
 body.ttrss_main {
   background-color: @default-bg;
   color: @default-text;
